# pixpack

./: .Rbuildignore  Cargo.toml  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  getpixpack.sh  savvy.md
.github/workflows/: r.yaml
R/: 000-wrappers.R  Rpixpack.R
inst/tinytest/: test_pixpack.R
man/: Rpixpack-package.Rd  Rpixpack.Rd  StringConversion.Rd  fileConversion.Rd  pixpack_convert.Rd  pixpack_info.Rd  pixpack_plot.Rd  pixpack_text.Rd
patches/: pixpack-local-delta.patch
pixpack/: Cargo.toml
pixpack/src/: main.rs
src/: Makevars.in  Makevars.win.in  Rpixpack-win.def  init.c  main.rs
src/rust/: Cargo.toml  api.h
src/rust/src/: lib.rs
