[package]
name = "pixpack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
# Pin image to match png-achunk's dependency to avoid multiple image versions in graph.
image = { version = "=0.24.7", default-features = true, features = ["png"] }
png-achunk = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc", "use-std"] }

[dev-dependencies]
tempfile = "3.20"

