[package]
name = "pixpack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1.8"
image = "0.25"
qrcode = "0.14.1"
quircs = "0.10.2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc", "use-std"] }

[dev-dependencies]
tempfile = "3"
